package org.dianna.core;

option java_package = "org.dianna.core";
option java_outer_classname = "Protos";

message DiaMessage {
	required DiaMessageType type = 1;
	optional bytes content = 2;
	
	enum DiaMessageType {
		PING = 0;
		PONG = 1;
   		BLOCK = 2;
		TRANSACTION = 3;
		//will be more
	}
}

message DiaDomainTransaction {
  required int32 version = 1;            // 4 bytes
  required bytes fee_transaction = 2;     // 64 bytes
  optional bytes prev_transaction = 3;    // 64 bytes
  required bytes domain = 4;              // 1 .. 64 bytes
  required bytes value = 5;               // 0 .. 10000 bytes
  required bytes next_pubkey = 6;         // ??? bytes
  required bytes signature = 7;           // ??? bytes
}

message DiaDomainTransactionSimple {
  // Simplified version for signing (i.e. without signature)
  required int32 version = 1;            // 4 bytes
  required bytes fee_transaction = 2;     // 64 bytes
  optional bytes prev_transaction = 3;    // 64 bytes
  required bytes domain = 4;              // 1 .. 64 bytes
  required bytes value = 5;               // 0 .. 10000 bytes
  required bytes next_pubkey = 6;         // ??? bytes
}

message DiaBlockHeader {
  required int32 version = 1;
  required bytes prev_block_hash = 2;
  required int64 timestamp = 3;
  required int32 namespace = 4;
  required uint64 price = 5;
  required bytes merkle_root = 6;

  message DiaAuxData {
    required bytes parent_hash = 1;
    required int32 coinbase_tx_index = 2;
    repeated bytes aux_branch = 3;
  }

  required DiaAuxData aux_data = 7;
}

message DiaBlock {
  required DiaBlockHeader header = 1;
  repeated DiaDomainTransaction transactions = 2;
  repeated bytes merkle_tree = 3;
}